Get all modifications to apply with only one rest call to the network-modification-server (#31)
* Get all modifications to apply with only one rest call to the network-modification-server

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>